projects/compiler/test/parser/lambdas_error_badparam_self.out
Error at %FILE_NAME%:1:11
Unexpected token '=>':
  |  (a, self) => 123
               ^